# GaINeR

./: README.md  combine_masks_with_images.py  gradio_mask.py  index.html  pyproject.toml
docker/: Dockerfile  docker_run.sh  entrypoint.sh
docs/: index.html  index.md
gainer/: .gitignore  exporter.py  gainer_config.py  gainer_model.py  gainer_pipeline.py  gainer_pixel_sampler.py  gainer_trainer.py  render.py
gainer/dataparsers/: dataparsers.py  mirage_dataparser.py
gainer/editing/: prepare_edits.py
gainer/field/: encodings.py  field.py  mlp.py
gainer/knn/: Header.cuh  KNN.cu  bindings.cpp  build_optix.sh  knn_algorithms.py  shaders.cu
gainer/utils/: black_to_mask.py  generate_mask.py  profiler.py  sampler.py  schedulers.py  viewer_utils.py
simulation/: apple.py  run_sim.sh
