[project]
name = "nerfstudio-gainer"
description = "Gaussian Splatting Encoded Neural Radiance Fields"
version = "0.1.0"

dependencies = [
    "nerfstudio >= 0.3.0",
    "pybind11"
    ] 

[tool.setuptools.packages.find]
include = ["gainer*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
gainer = 'gainer.gainer_config:gainer'

[project.entry-points.'nerfstudio.dataparser_configs']



[project.scripts]
# Note, add entrypoint name to nerfstudio/scripts/completions/install.py to include CLI completion
gainer-export = 'gainer.exporter:entrypoint'
gainer-render = 'gainer.render:entrypoint'